# svn-rs

./: Cargo.toml  README.md
cli/admin/: Cargo.toml  README.md
cli/admin/src/: args.rs  context.rs  main.rs
cli/admin/src/sub/: create.rs  mod.rs  verify.rs
cli/bench/: Cargo.toml  README.md
cli/bench/src/: args.rs  main.rs
cli/dumpfilter/: Cargo.toml
cli/dumpfilter/src/: args.rs  main.rs
cli/look/: Cargo.toml  README.md
cli/look/src/: args.rs  main.rs
cli/look/src/sub/: mod.rs  youngest.rs
cli/mucc/: Cargo.toml  README.md
cli/rdump/: Cargo.toml
cli/rdump/src/: args.rs  main.rs
cli/svn/: Cargo.toml
cli/svn/src/: args.rs  main.rs
cli/svn/src/sub/: add.rs  mod.rs
cli/svnserve/: Cargo.toml
cli/svnserve/src/: args.rs  client_info.rs  connection.rs  constant.rs  lib.rs  main.rs  repository.rs  serve.rs
cli/sync/: Cargo.toml
cli/sync/src/: args.rs  baton.rs  main.rs
cli/sync/src/sub/: mod.rs
cli/version/: Cargo.toml  README.md
cli/version/src/: args.rs  main.rs
crates/svn-client/: Cargo.toml
crates/svn-client/src/: add.rs  blame.rs  cancel.rs  cmdline.rs  commit.rs  ctx.rs  delete.rs  error.rs  info.rs  layout.rs  lib.rs  main.rs  status.rs  update.rs  util.rs
crates/svn-client/src/commit/: util.rs
crates/svn-delta/: Cargo.toml
crates/svn-delta/src/: action.rs  compose_delta.rs  compress.rs  editor.rs  lib.rs  range.rs  svndiff.rs  text_delta.rs  window.rs
crates/svn-delta/src/editor/: debug.rs  error.rs
crates/svn-diff/: Cargo.toml  README.md
crates/svn-diff/src/: binary_diff.rs  diff.rs  diff_file.rs  file.rs  lib.rs  memory.rs  parse_diff.rs  patch.rs  token.rs  tree.rs
crates/svn-diff/src/parse/: mod.rs  parser.rs
crates/svn-diff/tests/asset/: README.md  bad_git_diff_header.patch  diff_symbols_in_prop_unidiff.patch  git_tree_and_text_unidiff.patch  git_unidiff.patch  path_with_spaces_unidiff.patch  property_and_text_unidiff.patch  property_unidiff.patch  unidiff.patch  unidiff_lacking_trailing_eol.patch  unidiff_with_mergeinfo.patch
crates/svn-fs/: Cargo.toml
crates/svn-fs/src/: config.rs  error.rs  fs.rs  lib.rs  node.rs  root.rs  txn.rs  util.rs
crates/svn-fs/src/backend/: error.rs  mod.rs
crates/svn-fs/src/backend/fsfs/: caching.rs  data.rs  fs.rs  mod.rs  vtable.rs
crates/svn-fs/src/backend/fsx/: changes.rs
crates/svn-fs/src/fsfs/: dag.rs  data.rs  mod.rs
crates/svn-fs/src/fsx/: mod.rs
crates/svn-ra/: Cargo.toml  README.md
crates/svn-ra/src/: capability.rs  connection.rs  lib.rs  loader.rs  ra_layer.rs  reporter.rs  session.rs
crates/svn-ra/src/local/: mod.rs
crates/svn-ra/src/svn/: client.rs  cram.rs  item.rs  marshal.rs  mod.rs  reporter.rs  session.rs
crates/svn-repos/: Cargo.toml
crates/svn-repos/src/: authz.rs  commit.rs  config.rs  delta.rs  error.rs  hooks.rs  lib.rs  node.rs  repos.rs
crates/svn-repos/src/authz/: construction.rs  info.rs  parse.rs
crates/svn-repos/tests/: authz-test.rs
crates/svn-serve/: Cargo.toml
crates/svn-serve/src/: main.rs
crates/svn-subr/: Cargo.toml  README.md
crates/svn-subr/src/: auth.rs  checksum.rs  config.rs  dirent_url.rs  hash.rs  io.rs  lib.rs  opt.rs  path.rs  properties.rs  tristate.rs  user.rs  version.rs
crates/svn-subr/src/cache/: config.rs  memcache.rs  mod.rs
crates/svn-types/: Cargo.toml  README.md
crates/svn-types/src/: commit_info.rs  depth.rs  directory_entry.rs  error.rs  lib.rs  lock.rs  merge.rs  mime.rs  node_kind.rs
crates/svn-wc/: Cargo.toml  README.md
crates/svn-wc/src/: adm.rs  conflict.rs  ctx.rs  db.rs  entries.rs  error.rs  info.rs  lib.rs  notify.rs  root.rs  sqlite.rs  status.rs
crates/svn-wc/src/adm/: crawler.rs  error.rs  files.rs  ops.rs
crates/svn-wc/src/db/: error.rs  sql.rs  util.rs  wcroot.rs
crates/svn-wc/src/sqlite/: queries.rs
doc/: porting.md
