[workspace]
members = [ "cli/*","crates/*"]

resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Yiyu Lin<linyiyu1992@gmail.com>"]

[workspace.dependencies]
svn-types = { path = "crates/svn-types" }

svn-subr = { path = "crates/svn-subr" }

svn-repos = { path = "crates/svn-repos" }


clap = {  version = "4.5", features = ["derive"] }

thiserror = "2"

strum = { version = "0.27", features = ["derive"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"