[workspace]
members = [ "cli/*","crates/*"]

resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Yiyu Lin<linyiyu1992@gmail.com>"]

[workspace.dependencies]
svn-types = { path = "crates/svn-types" }
svn-subr = { path = "crates/svn-subr" }

svn-fs = { path = "crates/svn-fs" }
svn-ra = { path = "crates/svn-ra" }
svn-repos = { path = "crates/svn-repos" }
svn-delta = { path = "crates/svn-delta" }
svn-diff = { path = "crates/svn-diff" }
svn-wc = { path = "crates/svn-wc" }


clap = {  version = "4.5", features = ["derive"] }

thiserror = "2"
anyhow = "1.0"

strum = { version = "0.27", features = ["derive"] }
bitflags = "2.9.1"

bytes = "1.10"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"

uuid = { version = "1", features = ["v4"] }