[workspace]
resolver = "3"
members = ["cli/*", "crates/*"]

[workspace.package]
version = "0.0.0"
authors = ["Yiyu Lin<linyiyu1992@gmail.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
bitflags = "2.9.1"
bytes = "1.10"
# parser
chumsky = "0.10.1"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
fs-err = "3"
# tls
openssl = { version = "0.10" }
# test
rstest = "0.25"
rustls = { version = "0.23" }
strum = { version = "0.27", features = ["derive"] }
svn-delta = { path = "crates/svn-delta" }
svn-diff = { path = "crates/svn-diff" }
svn-fs = { path = "crates/svn-fs" }
svn-ra = { path = "crates/svn-ra" }
svn-repos = { path = "crates/svn-repos" }
svn-subr = { path = "crates/svn-subr" }
svn-types = { path = "crates/svn-types" }
svn-wc = { path = "crates/svn-wc" }
thiserror = "2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1", features = ["v4"] }
