[package]
name = "svnserve"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { version = "0.15" }
socket2 = "0.5"
svn-fs = { workspace = true }
svn-ra = { workspace = true }
svn-repos = { workspace = true }
svn-subr = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [] }
uuid = { workspace = true }


[features]
default = []

_sasl = []
