[package]
authors.workspace = true
edition.workspace = true
name = "svnsync"
version.workspace = true

[dependencies]
svn-types = { workspace = true }


anyhow = { workspace = true }
clap = { workspace = true }
svn-delta = { workspace = true }
svn-ra = { workspace = true }
svn-subr = { workspace = true }
