[package]
authors.workspace = true
edition.workspace = true
name = "svn-client"
version.workspace = true

[dependencies]
svn-diff = { workspace = true }
svn-ra = { workspace = true }
svn-subr = { workspace = true }
svn-types = { workspace = true }
svn-wc = { workspace = true }

thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
