[package]
name = "svn-diff"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
svn-types = { workspace = true }


thiserror = { workspace = true }

imara-diff = "0.2"
base85 = "2.0.0"
wu-diff = "0.1.2"
chumsky = { workspace = true } # For parsing diff output and patches
