[package]
authors.workspace = true
edition.workspace = true
name = "svn-ra"
version.workspace = true

[dependencies]
svn-delta = { workspace = true }
svn-types = { workspace = true }


strum = { workspace = true }
svn-subr.workspace = true

bytes = { workspace = true }
thiserror = { workspace = true }
[features]
_sasl = [] # SVN_HAVE_SASL
default = []
