[package]
authors.workspace = true
edition.workspace = true
name = "svn-ra"
version.workspace = true

[dependencies]
svn-delta = { workspace = true }
svn-subr = { workspace = true }
svn-types = { workspace = true }

bytes = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[features]
default = []

client = []
server = []

_sasl = [] # SVN_HAVE_SASL
