[package]
name = "svn-subr"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
svn-types = { workspace = true }

md-5 = "0.10.6"
hex = "0.4.3"

uuid = { workspace = true }
thiserror = { workspace = true }

fs-err = { workspace = true }

homedir = "0.3.4"
whoami = "1.6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(unix)'.dependencies]
