[package]
name = "svn-subr"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitflags = { workspace = true }
fs-err = { workspace = true }
hex = "0.4.3"
homedir = "0.3.4"
humansize = "2.1.3"
md-5 = "0.10.6"
mime = { workspace = true }
mime_guess = { version = "2.0.5" }
svn-types = { workspace = true }
thiserror = { workspace = true }
url = "2.5.4"
uuid = { workspace = true }
whoami = "1.6.0"

# filemagic = { version = "0.13.1", features = ["vendored"]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", features = ["extra_traits"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_Storage",
  "Win32_Storage_FileSystem",
] }

[features]
default = []
libmagic = []
