[package]
name = "svn-wc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
fs-err = { workspace = true }
rusqlite = { version = "0.36.0", features = ["bundled"] }
svn-subr = { workspace = true }
svn-types.workspace = true
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
